[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://core/ui/common/quick_bar/notifications_menu.gd" id="1_iomxi"]
[ext_resource type="PackedScene" uid="uid://duhgqixnyaweh" path="res://core/ui/components/notification_container.tscn" id="2_ak5ln"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="3_6rngx"]
[ext_resource type="Resource" uid="uid://dpc1o781f43ef" path="res://core/ui/card_ui/qb/quick_bar_menu_focus.tres" id="3_vli0v"]

[sub_resource type="LabelSettings" id="LabelSettings_5o5uh"]
line_spacing = 0.0

[node name="NotificationsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_iomxi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FocusGroup" parent="VBoxContainer/ScrollContainer/HFlowContainer" node_paths=PackedStringArray("current_focus") instance=ExtResource("3_6rngx")]
current_focus = NodePath("../NotificationContainer")
focus_stack = ExtResource("3_vli0v")

[node name="NoNotifications" parent="VBoxContainer/ScrollContainer/HFlowContainer" instance=ExtResource("2_ak5ln")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
icon_size = Vector2(24, 24)
text = "No recent notifications"
label_settings = SubResource("LabelSettings_5o5uh")

[node name="NotificationContainer" parent="VBoxContainer/ScrollContainer/HFlowContainer" instance=ExtResource("2_ak5ln")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
icon_size = Vector2(24, 24)
label_settings = SubResource("LabelSettings_5o5uh")
